crates/traits/tests/snapshots/snapshots__stale_quarantined.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::Quarantined }"
---
{
  "Stale": {
    "reason": "Quarantined"
  }
}
