crates/traits/tests/snapshots/snapshots__stale_self_evicted.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::SelfEvicted }"
---
{
  "Stale": {
    "reason": "SelfEvicted"
  }
}
