crates/traits/tests/snapshots/snapshots__stale_unknown_group.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::UnknownGroup }"
---
{
  "Stale": {
    "reason": "UnknownGroup"
  }
}
