crates/traits/tests/snapshots/snapshots__status_available.snap
---
source: crates/traits/tests/snapshots.rs
expression: "FeatureStatus::Available"
---
"Available"
