crates/traits/tests/snapshots/snapshots__status_unavailable.snap
---
source: crates/traits/tests/snapshots.rs
assertion_line: 498
expression: "FeatureStatus::Unavailable { missing }"
---
{
  "Unavailable": {
    "missing": {
      "proposals": [
        10
      ],
      "extensions": [],
      "app_components": {
        "ids": []
      }
    }
  }
}
