crates/traits/tests/snapshots/snapshots__status_upgradeable.snap
---
source: crates/traits/tests/snapshots.rs
expression: "FeatureStatus::Upgradeable"
---
"Upgradeable"
