crates/traits/tests/snapshots/snapshots__transport_deferred.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::TransportDeferred { group_id: gid() }"
---
{
  "TransportDeferred": {
    "group_id": [
      170,
      170,
      170,
      170
    ]
  }
}
